Fix home launcher freeze issue after two finger drag

Enable auto-hide shelf. Drag from bottom bezel to show home launcher
and, meanwhile, use second finger to drag on home launcher, the launcher
freezes.

It happens because shelf is hidden when dragging with second finger
which prevents the drag end event reaching home gesture handler.

Changes:
1. Remove shelf visibility check for drag end event.
2. Avoid processing drag event when animation is running.

Bug: 899554
Change-Id: I18262f813ab4acaab9266b7fba1c7790275d8fbc
Reviewed-on: https://chromium-review.googlesource.com/c/1311840
Reviewed-by: Sammie Quon <sammiequon@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604608}
Former-commit-id: 20236661c49fde434f56c6dd184775ad7314ec1b